updated about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -54,9 +54,6 @@
           <a href="/">
             <li>Home</li>
           </a>
-          <!-- <a href="/about">
-            <li>Work</li>
-          </a> -->
           <a href="/pages/about">
             <li> <em>About</em></li>
           </a>
@@ -64,38 +61,38 @@
       </div>
 
       <!-- Main Content -->
-      <main class="col-lg-10 mt-5">
+      <main class="col-lg-8 mt-5">
 
         <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-xl-6 text-left my-auto animated fadeIn" id="aboutMeProfilePic">
-              <img src="/img/about_me.jpg" class="rounded shadow" style="max-width: 500px;" alt="">
-            </div>
+          <div class="row justify-content-center mt-5">
 
-            <div class="col-xl-4 offset-xl-1 col-md-10 mt-md-5">
-              <h1 class="animated fadeIn">About Me</h1>
-              <hr class="animated fadeIn">
-              <p class="animated fadeIn mt-2">
-                I’m a student software engineer and designer who loves photography, working out, and how to use
-                technology to change lives. I learned many concepts of programming and design on my own and through
-                practice, and have had the opportunity to use my skills at Health Canada and Qlik.
+            <div class="col-md-7">
+              <h1 data-aos="fade-in" data-aos-duration='800'>About Me</h1>
+              <hr data-aos="fade-in" data-aos-delay='250' data-aos-duration='800'>
+              <p class="mt-2" data-aos="fade-in" data-aos-delay='300' data-aos-duration='800'>
+                I’m a student software developer and designer who loves photography, working out, and travelling. By
+                using my interest and passion for technology I have had the opportunity to use my skills at Health
+                Canada and Qlik.
+                <b>Finding ways to mix programming with art and design is my passion</b>
               </p>
-            </div>
-          </div>
-          <div class="row justify-content-md-center">
-            <div class="col-md-10 text-center mt-5">
-              <h2>
-                “Finding ways to mix programming with art and design is my passion”
-              </h2>
-            </div>
-          </div>
-          <div class="row justify-content-center">
-            <div class="col-lg-10 col-md-10 mt-3">
-              <p>
+
+              <p class="mt-3" data-aos="fade-in" data-aos-delay='600' data-aos-duration='800'>
                 As a kid I tried to find any way to use basic Photoshop in my school projects. Eventually I was using
                 After Effects to create movies for the class. <b>Programming however is where I was able to create
-                something dynamic while still using my love for art and design.</b>
+                  something dynamic while still using my love for art and design.</b>
               </p>
+
+            </div>
+
+            <div class="offset-md-1 col-md-4" id="aboutMeProfilePic" data-aos="fade-in" data-aos-delay='800' data-aos-duration='800'>
+              <img src="/img/isaportrait.jpg" class="rounded lightshadow" style="max-width: 400px;" alt="">
+            </div>
+
+          </div>
+
+          <div class="row justify-content-center" data-aos="fade-in" data-aos-delay='1000' data-aos-duration='800'>
+            <div class="col-lg-10 col-md-10 mt-3">
+              
               <p class="mt-2">
                 I enrolled in the University of Ottawa for Mechanical Engineering and Computing Technology in 2017.
                 During my free time between studying I joined several student clubs where I was able to design brands
@@ -104,18 +101,20 @@
                 the work environment and other aspects of my life.
               </p>
               <p class="mt-2">
-                <b>Interested in my work or background?</b> Send me <a href="mailto:munir.aljaw@gmail.com">an email</a> or
-                shoot me a message on <a href="https://www.linkedin.com/in/munir-aljawahari/">linkedin.</a>
+                <b>Interested in my work or background?</b> Send me <a href="mailto:munir.aljaw@gmail.com">an email</a>
+                or
+                shoot me a message on <a href="https://www.linkedin.com/in/munir-aljawahari/">Linkedin.</a>
               </p>
             </div>
           </div>
+
         </div>
 
         <!-- Photography -->
-        <div class="container" data-aos="fade-up" data-aos-duration="600" id="photographyContainer">
+        <div class="container" data-aos="fade-up" data-aos-duration="800" id="photographyContainer">
 
           <div class="row justify-content-md-center">
-            <div class="col-lg-5 text-center">
+            <div class="col-lg-7 text-center">
               <h2>Photography</h2>
               <p>Here are some of my favorite photos from my last travel</p>
             </div>
