--- a/pages/qlik.html
+++ b/pages/qlik.html
@@ -49,7 +49,7 @@
     <div class="row">
 
       <!-- Navigation -->
-      <div class="col-lg-2 animated" id="mynav">
+      <div class="col-lg-2" id="mynav">
         <ul class="text-left">
           <a href="/">
             <li>Home</li>
