--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
               <hr class="animated fadeIn">
               <p class="animated fadeIn mt-2 pr-3" id="blurb">
                 A student from Ottawa that focuses on engineering beautiful user experiences. Previously
-                interned at University of Ottawa, Qlik, and Health Canada.
-                Currently enrolled in my 4th year at uOttawa and seeking a Summer 2021 Internship.
+                interned at Qlik, University of Ottawa, and Health Canada.
+                Currently enrolled in my 5th year at uOttawa and seeking a Summer 2022 Internship.
               </p>
 
               <!-- Contact Buttons -->
